deployment-master/components/zipkin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: zipkin
  template:
    metadata:
      labels:
        name: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9411
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
