deployment-master/components/zipkin/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-url
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 9411
      targetPort: 9411
  selector:
    name: zipkin
