deployment-master/components/zipkin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-zipkin
spec:
  rules:
    - http:
        paths:
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin-url
                port:
                  number: 9411
  ingressClassName: nginx
